# TFM_real_benchmark

./: .gitignore  Makefile  README.md  README_post3.md  pyproject.toml  tabfm-tasks.md  uv.toml
config/: default.yaml  sensitivity_nonperishable_high.yaml  sensitivity_nonperishable_low.yaml  sensitivity_perishable_high.yaml  sensitivity_perishable_low.yaml
configs/: experiment_config.yaml  lgbm_best_params_tweedie_engineered.json  lgbm_best_params_tweedie_gbm.json  lgbm_best_params_tweedie_raw.json  xgb_best_params_tweedie_engineered.json  xgb_best_params_tweedie_gbm.json  xgb_best_params_tweedie_raw.json
notebooks/: insurance_profile.ipynb  post2_analysis.ipynb  post2_baselines.ipynb  post2_insurance.ipynb  post2_supplementary.ipynb  post2_tabpfn-prev_runpod.ipynb  post2_tabpfn.ipynb  post2_tabpfn_interpretability.ipynb  post2_tabpfn_interpretability_local.ipynb  post3_data_analysis.ipynb  post3_deployment.ipynb  post3_evaluation.ipynb  post3_feature_build.ipynb  post3_interpret.ipynb  post3_kaggle_submission.ipynb  post3_lightgbm_engineered.ipynb  post3_newsvendor.ipynb  recalibration_analysis.ipynb  store-sales-time-series-forecasting.ipynb
results/: narrative_bullets.md  summary_tables.md
results/cv/: GLM_Tweedie_engineered_tweedie_fold_metrics.json  GLM_Tweedie_raw_tweedie_fold_metrics.json  GLM_hurdle_engineered_hurdle_fold_metrics.json  GLM_hurdle_gbm_hurdle_fold_metrics.json  LightGBM_engineered_tweedie_fold_metrics.json  (+10 more)
scripts/: run_tuning.py
src/: evaluation_utils.py  metrics.py  plotting.py
tests/: test_kaggle_pipeline.py  test_leakage.py
(+55 files in other folders)
