[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabfm-real-world"
version = "0.1.0"
description = "Tabular Foundation Models in the Real World — experiments for Substack series"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Core ML
    "tabpfn>=2.0",
    # PyTorch pinned to cu124 — works with CUDA 12.8 driver (RunPod RTX 4090).
    # cu130 (default since torch 2.8) requires CUDA 13.0+ driver which RunPod doesn't have yet.
    "torch==2.5.1",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    # Hyperparameter tuning
    "optuna>=3.6",
    "optuna-integration[lightgbm]>=3.6",
    # Interpretability
    "shap>=0.46",
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    # Plotting
    "matplotlib>=3.9",
    "seaborn>=0.13",
    # Utilities
    "tqdm>=4.66",
    "psutil>=6.0",
    "scipy>=1.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "black>=24.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"
